automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!doctype html>
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Your Title Goes Here</title>
-    <link rel="stylesheet" href="css/style.css">
+<html> 
+  <head>  
+    <title>Lily's Page</title>
+    <!--what's the site called? above-->
+  <!--head contains information about the website that's not actually on the website.-->
   </head>
-  <body>
-    <!-- Design Your Site Here! -->
+  
+  <body> 
+    <h2>All about Lily</h2>
+    <a href="https://www.youtube.com/channel/UCBDwO0hIB_l7I_5UJjHx3yg"> Check Lily's Youtube!</a>
+    
+    <div id="Facts"> 
+      <!--list of facts, how to make an ordered list or a bulleted list-->
+      <h3>Facts</h3>
+        <ol>
+          <li>From Maryland</li>
+          <li>18 years old</li>
+        </ol>
+    </div>
+    
+    <div id="Favorites">
+      <p>Lily likes running and yoga.</p>
+      <img 
+      src="https://images.pexels.com/photos/588561/pexels-photo-588561.jpeg?auto=compress&cs=tinysrgb&h=350"> 
+      <h5>This is a fun pose! </h5>
+    </div>
   </body>
 </html>
